# mafredo

./: .coveragerc  .gitattributes  .gitignore  .gitlab-ci.yml  .markdownlint.json  .pre-commit-config.yaml  .prettierrc  AUTHORS.md  AUTHORS.rst  CHANGELOG.md  CHANGELOG.rst  Justfile  LICENSE.txt  README.md  README.rst  make_docs.cmd  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-publish.yml
docs/: Hyddb1.rst  Makefile  Rao.rst  conf.py  conventions.md  index.rst  requirements.txt
docs/examples/: FPSO.nc  barge_100x30x4.gdf  barge_100x30x4.nc  barge_100x30x4.owd  calculate_rao.py  capytaine.nc  capytaine_to_nc.py  cheetah.dhyd  cheetah.nc  extrapolation.py  from_capytaine_to_mafredo.py  json_serialization_example.py  save_and_load.py
docs/gallery/: barge.hyd  barge_100x30x4_q1.yml  plot_cylinder.py  plot_demo.py  plot_extrapolation.py  plot_orcaflex.py  plot_wavelength.py  readme.rst
src/mafredo/: __init__.py  helpers.py  hyddb1.py  rao.py
src/rao/: rao.py  skeleton.py
tests/: c:\data\test.hyd  conftest.py  read_ofx.py  test_add.py  test_complex_unit.py  test_copy_crash.py  test_dict_methods.py  test_dict_serialization.py  test_example_extrap.py  test_extrapolate.py  test_helpers.py  test_hyddb1.py  test_init.py  test_ofx_phase_conv.py  test_orcaflex_and_symmetry.py  test_order_dof_modes.py  test_plot.py  test_rao.py  test_read_from_ofx_11_4a.py  test_skeleton.py  test_unit_conversion.py  test_wavelength.py  test_write_read_hyd.py
tests/files/: FPOS Mesh-ORCAWAVE.gdf  Friesland1.yml  OrcaWave_FPSO.pickle  barge.hyd  barge_100x30x4.yml  capytaine.nc  grid_t20.dhyd  open_cylinder.nc  open_cylinder_2.nc  open_cylinder_3.nc  refcase_ofx_lags.yml  refcase_ofx_leads.yml  refcase_ofx_leads_zero_down.yml
