[build-system]
requires = ["setuptools>=64", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
urls = { Homepage = "https://github.com/RubendeBruin/mafredo", Documentation = "https://open-ocean.org/mafredo" }
name = "MaFreDo"
description = "Marine Frequency Domain"
dynamic = ["version"] # versie komt uit git via setuptools-scm
readme = { file = "README.rst", content-type = "text/x-rst" }
authors = [{ name = "Ruben de Bruin", email = "rubenebruin@gmail.com" }]
license = { text = "MPL-2.0" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
]
# requires-python = ">=3.8"

dependencies = [
    'importlib-metadata; python_version < "3.8"',
    "numpy",
    "xarray",
    "capytaine",
    "matplotlib",
    "pyyaml",
]

[project.optional-dependencies]
testing = ["setuptools", "pytest", "pytest-cov"]

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests"]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "node-and-date"

[tool.pytest.ini_options]
addopts = ["--cov", "rao", "--cov-report", "term-missing", "--verbose"]
norecursedirs = ["dist", "build", ".tox"]
testpaths = ["tests"]

[tool.flake8]
max_line_length = 88
extend_ignore = ["E203", "W503"]
exclude = [".tox", "build", "dist", ".eggs", "docs/conf.py"]

[tool.wheel]
universal = true

[tool.devpi.upload]
no_vcs = true
formats = ["bdist_wheel"]
